// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors throws error on incomplete config definition 1`] = `
"PrismaParsingError: Expected identifier

  1 | 
  2 |       generator client {
> 3 |         
    |         ^
"
`;

exports[`errors throws error on incomplete document 1`] = `
"PrismaParsingError: Expected field name

  1 | 
  2 |       model Foo {
> 3 |         
    |         ^
"
`;

exports[`errors throws error on incomplete field definition 1`] = `
"PrismaParsingError: Expected field type

  2 |       model Foo {
  3 |           name
> 4 |       }
    |       ^
  5 |         
"
`;

exports[`errors throws error on incomplete function call 1`] = `
"PrismaParsingError: Expected )

  2 |       datasource db1 {
  3 |         option = func(
> 4 |       }
    |       ^
  5 |         
"
`;

exports[`errors throws error on missing { 1`] = `
"PrismaParsingError: Expected {

  1 | 
> 2 |       model Foo @attr {
    |                 ^
  3 |         name Int
  4 |       }
  5 |         
"
`;

exports[`errors throws error on missing config value 1`] = `
"PrismaParsingError: Expected expression

  2 |       datasource db1 {
  3 |         option =
> 4 |       }
    |       ^
  5 |         
"
`;

exports[`errors throws error on missing model name 1`] = `
"PrismaParsingError: Expected model name

  1 | 
> 2 |       model {
    |             ^
  3 |         name Int
  4 |       }
  5 |         
"
`;

exports[`errors throws error on unexpected token 1`] = `
"PrismaParsingError: Unexpected token

  1 | 
> 2 |       model Foo [
    |                 ^
  3 |           name Int
  4 |       ]
  5 |         
"
`;

exports[`parses prisma example schema 1`] = `
Object {
  "definitions": Array [
    Object {
      "kind": "ConfigDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 4,
          "offset": 72,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "name": Object {
        "identifier": "db1",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
      },
      "options": Array [
        Object {
          "key": Object {
            "identifier": "provider",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 11,
                "line": 2,
                "offset": 27,
              },
              "start": Object {
                "column": 3,
                "line": 2,
                "offset": 19,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 21,
              "line": 2,
              "offset": 37,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 19,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 21,
                "line": 2,
                "offset": 37,
              },
              "start": Object {
                "column": 14,
                "line": 2,
                "offset": 30,
              },
            },
            "value": "mysql",
          },
        },
        Object {
          "key": Object {
            "identifier": "url",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 6,
                "line": 3,
                "offset": 43,
              },
              "start": Object {
                "column": 3,
                "line": 3,
                "offset": 40,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 33,
              "line": 3,
              "offset": 70,
            },
            "start": Object {
              "column": 3,
              "line": 3,
              "offset": 40,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 33,
                "line": 3,
                "offset": 70,
              },
              "start": Object {
                "column": 9,
                "line": 3,
                "offset": 46,
              },
            },
            "value": "mysql://localhost:3306",
          },
        },
      ],
      "type": "datasource",
    },
    Object {
      "kind": "ConfigDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 9,
          "offset": 156,
        },
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 74,
        },
      },
      "name": Object {
        "identifier": "db2",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 6,
            "offset": 88,
          },
          "start": Object {
            "column": 12,
            "line": 6,
            "offset": 85,
          },
        },
      },
      "options": Array [
        Object {
          "key": Object {
            "identifier": "provider",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 11,
                "line": 7,
                "offset": 101,
              },
              "start": Object {
                "column": 3,
                "line": 7,
                "offset": 93,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 26,
              "line": 7,
              "offset": 116,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 93,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 26,
                "line": 7,
                "offset": 116,
              },
              "start": Object {
                "column": 14,
                "line": 7,
                "offset": 104,
              },
            },
            "value": "postgresql",
          },
        },
        Object {
          "key": Object {
            "identifier": "url",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 6,
                "line": 8,
                "offset": 122,
              },
              "start": Object {
                "column": 3,
                "line": 8,
                "offset": 119,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 38,
              "line": 8,
              "offset": 154,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 119,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 38,
                "line": 8,
                "offset": 154,
              },
              "start": Object {
                "column": 9,
                "line": 8,
                "offset": 125,
              },
            },
            "value": "postgresql://localhost:5432",
          },
        },
      ],
      "type": "datasource",
    },
    Object {
      "kind": "ConfigDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 15,
          "offset": 237,
        },
        "start": Object {
          "column": 1,
          "line": 11,
          "offset": 158,
        },
      },
      "name": Object {
        "identifier": "db3",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 11,
            "offset": 172,
          },
          "start": Object {
            "column": 12,
            "line": 11,
            "offset": 169,
          },
        },
      },
      "options": Array [
        Object {
          "key": Object {
            "identifier": "provider",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 11,
                "line": 12,
                "offset": 185,
              },
              "start": Object {
                "column": 3,
                "line": 12,
                "offset": 177,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 22,
              "line": 12,
              "offset": 196,
            },
            "start": Object {
              "column": 3,
              "line": 12,
              "offset": 177,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 22,
                "line": 12,
                "offset": 196,
              },
              "start": Object {
                "column": 14,
                "line": 12,
                "offset": 188,
              },
            },
            "value": "sqlite",
          },
        },
        Object {
          "key": Object {
            "identifier": "url",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 6,
                "line": 13,
                "offset": 202,
              },
              "start": Object {
                "column": 3,
                "line": 13,
                "offset": 199,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 22,
              "line": 13,
              "offset": 218,
            },
            "start": Object {
              "column": 3,
              "line": 13,
              "offset": 199,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 22,
                "line": 13,
                "offset": 218,
              },
              "start": Object {
                "column": 9,
                "line": 13,
                "offset": 205,
              },
            },
            "value": "file:dev.db",
          },
        },
        Object {
          "key": Object {
            "identifier": "enabled",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 10,
                "line": 14,
                "offset": 228,
              },
              "start": Object {
                "column": 3,
                "line": 14,
                "offset": 221,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 17,
              "line": 14,
              "offset": 235,
            },
            "start": Object {
              "column": 3,
              "line": 14,
              "offset": 221,
            },
          },
          "value": Object {
            "kind": "BooleanLiteral",
            "location": Object {
              "end": Object {
                "column": 17,
                "line": 14,
                "offset": 235,
              },
              "start": Object {
                "column": 13,
                "line": 14,
                "offset": 231,
              },
            },
            "value": true,
          },
        },
      ],
      "type": "datasource",
    },
    Object {
      "kind": "ConfigDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 19,
          "offset": 291,
        },
        "start": Object {
          "column": 1,
          "line": 17,
          "offset": 239,
        },
      },
      "name": Object {
        "identifier": "client",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 17,
            "line": 17,
            "offset": 255,
          },
          "start": Object {
            "column": 11,
            "line": 17,
            "offset": 249,
          },
        },
      },
      "options": Array [
        Object {
          "key": Object {
            "identifier": "provider",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 11,
                "line": 18,
                "offset": 268,
              },
              "start": Object {
                "column": 3,
                "line": 18,
                "offset": 260,
              },
            },
          },
          "kind": "ConfigOption",
          "location": Object {
            "end": Object {
              "column": 32,
              "line": 18,
              "offset": 289,
            },
            "start": Object {
              "column": 3,
              "line": 18,
              "offset": 260,
            },
          },
          "value": Object {
            "kind": "StringLiteral",
            "location": Object {
              "end": Object {
                "column": 32,
                "line": 18,
                "offset": 289,
              },
              "start": Object {
                "column": 14,
                "line": 18,
                "offset": 271,
              },
            },
            "value": "prisma-client-js",
          },
        },
      ],
      "type": "generator",
    },
    Object {
      "fields": Array [
        Object {
          "attributes": Array [
            Object {
              "arguments": Array [],
              "kind": "Attribute",
              "location": Object {
                "end": Object {
                  "column": 17,
                  "line": 22,
                  "offset": 322,
                },
                "start": Object {
                  "column": 14,
                  "line": 22,
                  "offset": 319,
                },
              },
              "name": "@id",
            },
          ],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 17,
              "line": 22,
              "offset": 322,
            },
            "start": Object {
              "column": 3,
              "line": 22,
              "offset": 308,
            },
          },
          "name": Object {
            "identifier": "id",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 5,
                "line": 22,
                "offset": 310,
              },
              "start": Object {
                "column": 3,
                "line": 22,
                "offset": 308,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 13,
                "line": 22,
                "offset": 318,
              },
              "start": Object {
                "column": 10,
                "line": 22,
                "offset": 315,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 13,
                  "line": 22,
                  "offset": 318,
                },
                "start": Object {
                  "column": 10,
                  "line": 22,
                  "offset": 315,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 23,
              "offset": 338,
            },
            "start": Object {
              "column": 3,
              "line": 23,
              "offset": 325,
            },
          },
          "name": Object {
            "identifier": "name",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 7,
                "line": 23,
                "offset": 329,
              },
              "start": Object {
                "column": 3,
                "line": 23,
                "offset": 325,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 23,
                "offset": 338,
              },
              "start": Object {
                "column": 10,
                "line": 23,
                "offset": 332,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 16,
                  "line": 23,
                  "offset": 338,
                },
                "start": Object {
                  "column": 10,
                  "line": 23,
                  "offset": 332,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 24,
              "offset": 354,
            },
            "start": Object {
              "column": 3,
              "line": 24,
              "offset": 341,
            },
          },
          "name": Object {
            "identifier": "email",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 24,
                "offset": 346,
              },
              "start": Object {
                "column": 3,
                "line": 24,
                "offset": 341,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 24,
                "offset": 354,
              },
              "start": Object {
                "column": 10,
                "line": 24,
                "offset": 348,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 16,
                  "line": 24,
                  "offset": 354,
                },
                "start": Object {
                  "column": 10,
                  "line": 24,
                  "offset": 348,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 14,
              "line": 25,
              "offset": 368,
            },
            "start": Object {
              "column": 3,
              "line": 25,
              "offset": 357,
            },
          },
          "name": Object {
            "identifier": "age",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 6,
                "line": 25,
                "offset": 360,
              },
              "start": Object {
                "column": 3,
                "line": 25,
                "offset": 357,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 14,
                "line": 25,
                "offset": 368,
              },
              "start": Object {
                "column": 10,
                "line": 25,
                "offset": 364,
              },
            },
            "modifier": "optional",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 13,
                  "line": 25,
                  "offset": 367,
                },
                "start": Object {
                  "column": 10,
                  "line": 25,
                  "offset": 364,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 26,
              "offset": 384,
            },
            "start": Object {
              "column": 3,
              "line": 26,
              "offset": 371,
            },
          },
          "name": Object {
            "identifier": "posts",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 26,
                "offset": 376,
              },
              "start": Object {
                "column": 3,
                "line": 26,
                "offset": 371,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 26,
                "offset": 384,
              },
              "start": Object {
                "column": 10,
                "line": 26,
                "offset": 378,
              },
            },
            "modifier": "array",
            "name": Object {
              "identifier": "Post",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 14,
                  "line": 26,
                  "offset": 382,
                },
                "start": Object {
                  "column": 10,
                  "line": 26,
                  "offset": 378,
                },
              },
            },
          },
        },
      ],
      "kind": "ModelDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 27,
          "offset": 386,
        },
        "start": Object {
          "column": 1,
          "line": 21,
          "offset": 293,
        },
      },
      "name": Object {
        "identifier": "User",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 11,
            "line": 21,
            "offset": 303,
          },
          "start": Object {
            "column": 7,
            "line": 21,
            "offset": 299,
          },
        },
      },
    },
    Object {
      "fields": Array [
        Object {
          "attributes": Array [
            Object {
              "arguments": Array [],
              "kind": "Attribute",
              "location": Object {
                "end": Object {
                  "column": 21,
                  "line": 30,
                  "offset": 421,
                },
                "start": Object {
                  "column": 18,
                  "line": 30,
                  "offset": 418,
                },
              },
              "name": "@id",
            },
          ],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 21,
              "line": 30,
              "offset": 421,
            },
            "start": Object {
              "column": 3,
              "line": 30,
              "offset": 403,
            },
          },
          "name": Object {
            "identifier": "id",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 5,
                "line": 30,
                "offset": 405,
              },
              "start": Object {
                "column": 3,
                "line": 30,
                "offset": 403,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 17,
                "line": 30,
                "offset": 417,
              },
              "start": Object {
                "column": 14,
                "line": 30,
                "offset": 414,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 17,
                  "line": 30,
                  "offset": 417,
                },
                "start": Object {
                  "column": 14,
                  "line": 30,
                  "offset": 414,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 20,
              "line": 31,
              "offset": 441,
            },
            "start": Object {
              "column": 3,
              "line": 31,
              "offset": 424,
            },
          },
          "name": Object {
            "identifier": "title",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 31,
                "offset": 429,
              },
              "start": Object {
                "column": 3,
                "line": 31,
                "offset": 424,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 20,
                "line": 31,
                "offset": 441,
              },
              "start": Object {
                "column": 14,
                "line": 31,
                "offset": 435,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 20,
                  "line": 31,
                  "offset": 441,
                },
                "start": Object {
                  "column": 14,
                  "line": 31,
                  "offset": 435,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 20,
              "line": 32,
              "offset": 461,
            },
            "start": Object {
              "column": 3,
              "line": 32,
              "offset": 444,
            },
          },
          "name": Object {
            "identifier": "content",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 10,
                "line": 32,
                "offset": 451,
              },
              "start": Object {
                "column": 3,
                "line": 32,
                "offset": 444,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 20,
                "line": 32,
                "offset": 461,
              },
              "start": Object {
                "column": 14,
                "line": 32,
                "offset": 455,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 20,
                  "line": 32,
                  "offset": 461,
                },
                "start": Object {
                  "column": 14,
                  "line": 32,
                  "offset": 455,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [
            Object {
              "arguments": Array [
                Object {
                  "arguments": Array [],
                  "kind": "FunctionCall",
                  "location": Object {
                    "end": Object {
                      "column": 37,
                      "line": 33,
                      "offset": 498,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 33,
                      "offset": 493,
                    },
                  },
                  "name": Object {
                    "identifier": "now",
                    "kind": "Identifier",
                    "location": Object {
                      "end": Object {
                        "column": 35,
                        "line": 33,
                        "offset": 496,
                      },
                      "start": Object {
                        "column": 32,
                        "line": 33,
                        "offset": 493,
                      },
                    },
                  },
                },
              ],
              "kind": "Attribute",
              "location": Object {
                "end": Object {
                  "column": 38,
                  "line": 33,
                  "offset": 499,
                },
                "start": Object {
                  "column": 23,
                  "line": 33,
                  "offset": 484,
                },
              },
              "name": "@default",
            },
          ],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 38,
              "line": 33,
              "offset": 499,
            },
            "start": Object {
              "column": 3,
              "line": 33,
              "offset": 464,
            },
          },
          "name": Object {
            "identifier": "createdAt",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 12,
                "line": 33,
                "offset": 473,
              },
              "start": Object {
                "column": 3,
                "line": 33,
                "offset": 464,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 22,
                "line": 33,
                "offset": 483,
              },
              "start": Object {
                "column": 14,
                "line": 33,
                "offset": 475,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "DateTime",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 22,
                  "line": 33,
                  "offset": 483,
                },
                "start": Object {
                  "column": 14,
                  "line": 33,
                  "offset": 475,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 18,
              "line": 34,
              "offset": 517,
            },
            "start": Object {
              "column": 3,
              "line": 34,
              "offset": 502,
            },
          },
          "name": Object {
            "identifier": "author",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 9,
                "line": 34,
                "offset": 508,
              },
              "start": Object {
                "column": 3,
                "line": 34,
                "offset": 502,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 18,
                "line": 34,
                "offset": 517,
              },
              "start": Object {
                "column": 14,
                "line": 34,
                "offset": 513,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "User",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 18,
                  "line": 34,
                  "offset": 517,
                },
                "start": Object {
                  "column": 14,
                  "line": 34,
                  "offset": 513,
                },
              },
            },
          },
        },
      ],
      "kind": "ModelDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 35,
          "offset": 519,
        },
        "start": Object {
          "column": 1,
          "line": 29,
          "offset": 388,
        },
      },
      "name": Object {
        "identifier": "Post",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 11,
            "line": 29,
            "offset": 398,
          },
          "start": Object {
            "column": 7,
            "line": 29,
            "offset": 394,
          },
        },
      },
    },
  ],
  "kind": "Document",
  "location": Object {
    "end": Object {
      "column": 1,
      "line": 36,
      "offset": 520,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
